@@ -2,6 +2,7 @@
 
 	* Split rendering routines off into 'gamerend.cc'.
 	* Added Game_window::get_party().
+	* Started writing dungeon-rendering.
 
 2000-09-08  Tristan Tarrant  <nadir@users.sourceforge.net>
 
